refactor: removed MixinModelBlock as it's not used now, reorganized mixin packages, removed the ai-sloppiest comments, eliminated some warns